--- a/MyChecklists/Base.lproj/Main.storyboard
+++ b/MyChecklists/Base.lproj/Main.storyboard
@@ -16,25 +16,34 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="checkmark" indentationWidth="10" reuseIdentifier="ChecklistItem" id="1kW-6m-CBh">
-                                <rect key="frame" x="0.0" y="44.5" width="375" height="43.5"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="detailDisclosureButton" indentationWidth="10" reuseIdentifier="ChecklistItem" id="1kW-6m-CBh">
+                                <rect key="frame" x="0.0" y="44.5" width="375" height="44.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="1kW-6m-CBh" id="DnA-6L-0Ip">
-                                    <rect key="frame" x="0.0" y="0.0" width="338.5" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="322" height="44.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" tag="1000" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KWZ-Kp-LeS">
-                                            <rect key="frame" x="16" y="11" width="306.5" height="21.5"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" tag="1001" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="√ " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Muv-Dq-bJ1">
+                                            <rect key="frame" x="16" y="8.5" width="19" height="27.5"/>
+                                            <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="22"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" tag="1000" contentMode="left" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KWZ-Kp-LeS">
+                                            <rect key="frame" x="43" y="11" width="263" height="22.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="KWZ-Kp-LeS" firstAttribute="leading" secondItem="DnA-6L-0Ip" secondAttribute="leading" constant="16" id="65D-lQ-9Cq"/>
+                                        <constraint firstItem="Muv-Dq-bJ1" firstAttribute="top" secondItem="DnA-6L-0Ip" secondAttribute="topMargin" constant="-2.5" id="9bj-TE-UZz"/>
                                         <constraint firstAttribute="trailing" secondItem="KWZ-Kp-LeS" secondAttribute="trailing" constant="16" id="L0W-CF-1hh"/>
                                         <constraint firstItem="KWZ-Kp-LeS" firstAttribute="top" secondItem="DnA-6L-0Ip" secondAttribute="top" constant="11" id="PrJ-Cf-BkK"/>
+                                        <constraint firstItem="KWZ-Kp-LeS" firstAttribute="leading" secondItem="Muv-Dq-bJ1" secondAttribute="trailing" constant="8" id="ZG5-ci-Tvm"/>
                                         <constraint firstAttribute="bottom" secondItem="KWZ-Kp-LeS" secondAttribute="bottom" constant="11" id="jGo-r3-IWW"/>
+                                        <constraint firstItem="Muv-Dq-bJ1" firstAttribute="leading" secondItem="DnA-6L-0Ip" secondAttribute="leading" constant="16" id="uUE-M5-Dma"/>
+                                        <constraint firstItem="Muv-Dq-bJ1" firstAttribute="centerY" secondItem="KWZ-Kp-LeS" secondAttribute="centerY" id="wRq-Lt-79U"/>
                                     </constraints>
                                 </tableViewCellContentView>
                             </tableViewCell>
